log
Thu May  5 01:10:34 UTC 2022: 
 heap.c | 34 +++++++++++++++++++++++++++++++---
 1 file changed, 31 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:43:41: error: comparison between pointer and integer [-Werror]
    if (pq->heapArray[pq->size].priority == NULL){
                                         ^~
cc1: all warnings being treated as errors
Compilation failed
bb76feb
Thu May  5 01:10:53 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:43:32: error: invalid operands to binary == (have ‘heapElem {aka struct nodo}’ and ‘void *’)
    if (pq->heapArray[pq->size] == NULL){
        ~~~~~~~~~~~~~~~~~~~~~~~ ^~
Compilation failed
5f5339a
Thu May  5 01:11:02 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 5/70
a256d40
Thu May  5 01:12:25 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 15/70
bffef92
Thu May  5 01:15:40 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
06945aa
Thu May  5 01:16:19 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
112fd41
Thu May  5 01:16:30 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
095cf14
Thu May  5 01:26:08 UTC 2022: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
108e122
Thu May  5 01:28:43 UTC 2022: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|3
total_score: 15/70
bc34734
Thu May  5 01:32:52 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
aa35a70
Thu May  5 01:33:18 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:60:26: error: expected ‘,’ or ‘;’ before ‘)’ token
    int parent = (aux-1)/2);
                          ^
heap.c:65:28: error: expected ‘;’ before ‘)’ token
       parent = (parent-1)/2);
                            ^
heap.c:65:28: error: expected statement before ‘)’ token
Compilation failed
061e0cf
Thu May  5 01:33:25 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 15/70
4caefe5
Thu May  5 01:35:58 UTC 2022: 
 heap.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|3
total_score: 15/70
ac145e1
Thu May  5 01:37:05 UTC 2022: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|3
total_score: 15/70
28eb0d5
Thu May  5 01:38:06 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:45:27: error: incompatible types when returning type ‘heapElem {aka struct nodo}’ but ‘void *’ was expected
       return pq->heapArray[0];
              ~~~~~~~~~~~~~^~~
Compilation failed
ff89182
Thu May  5 01:38:13 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|3
total_score: 15/70
12f1c60
Thu May  5 01:38:25 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|3
total_score: 15/70
79dc053
Thu May  5 01:38:35 UTC 2022: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|3
total_score: 15/70
769a81a
Thu May  5 01:40:33 UTC 2022: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|3
total_score: 15/70
c29ba92
Thu May  5 01:52:08 UTC 2022: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 20/70
ec39713
Thu May  5 01:52:45 UTC 2022: 
 heap.c | 7 -------
 1 file changed, 7 deletions(-)
/tmp/ccD5NSu8.o: In function `test_pop':
test.c:(.text+0xa51): undefined reference to `heap_pop'
test.c:(.text+0xabc): undefined reference to `heap_pop'
test.c:(.text+0xb05): undefined reference to `heap_pop'
test.c:(.text+0xb4e): undefined reference to `heap_pop'
test.c:(.text+0xb94): undefined reference to `heap_pop'
collect2: error: ld returned 1 exit status
Compilation failed
f94ba0b
Thu May  5 01:53:02 UTC 2022: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|3
total_score: 20/70
3bece92
Thu May  5 01:56:43 UTC 2022: 
 heap.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  3|3
total_score: 20/70
7cd7e8c
Thu May  5 01:58:16 UTC 2022: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
97c08e8
Thu May  5 01:59:34 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|3
total_score: 20/70
246a688
Thu May  5 02:00:26 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|3
total_score: 20/70
b493367
Thu May  5 02:03:34 UTC 2022: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|3
total_score: 20/70
93ec660
Thu May  5 02:04:08 UTC 2022: 
 heap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  3|3
total_score: 20/70
efcc1db
Thu May  5 02:04:28 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 20/70
cd5fd2d
Thu May  5 02:06:16 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|3
total_score: 20/70
f90a1d8
Thu May  5 02:07:59 UTC 2022: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  3|3
total_score: 20/70
dec570f
Thu May  5 15:05:04 UTC 2022: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|3
total_score: 20/70
184c4a9
Thu May  5 15:11:42 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_top’:
heap.c:43:8: error: used struct type value where scalar is required
    if (pq->heapArray[0]) {
        ^~
Compilation failed
d0cca07
Thu May  5 15:12:28 UTC 2022: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|3
total_score: 20/70
36764e6
Thu May  5 15:15:00 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
4589701
Thu May  5 15:16:08 UTC 2022: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:62:4: error: expected ‘;’ before ‘int’
    int aux = i;
    ^~~
heap.c:66:58: error: ‘aux’ undeclared (first use in this function)
       if (pq->heapArray[parent].priority > pq->heapArray[aux].priority) break;
                                                          ^~~
heap.c:66:58: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
195394b
Thu May  5 15:16:15 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
e1fa959
Thu May  5 15:16:41 UTC 2022: 
 heap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  4|2
total_score: 30/70
a890e32
Thu May  5 15:17:07 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|2
total_score: 30/70
274a713
Thu May  5 15:17:50 UTC 2022: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
heap.c: In function ‘heap_push’:
heap.c:67:7: error: ‘aux’ undeclared (first use in this function)
       aux = parent;
       ^~~
heap.c:67:7: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
8b31e83
Thu May  5 15:18:42 UTC 2022: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|2
total_score: 30/70
8bc50f9
Thu May  5 15:22:19 UTC 2022: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 25/70
5e4eeee
Thu May  5 15:22:30 UTC 2022: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|2
total_score: 30/70
e85ec5d
Thu May  5 15:23:18 UTC 2022: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  4|2
total_score: 30/70
eff72f5
Thu May  5 15:25:22 UTC 2022: 
 heap.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  4|2
total_score: 30/70
925dfcb
